Closed
Bug 916816
Opened 12 years ago
Closed 12 years ago
New Google Maps rendering glitch
Categories
(Core :: Graphics: CanvasWebGL, defect)
Tracking
()
VERIFIED
FIXED
mozilla27
| Tracking | Status | |
|---|---|---|
| firefox25 | --- | unaffected |
| firefox26 | + | verified |
| firefox27 | + | verified |
People
(Reporter: alice0775, Assigned: jgilbert)
References
Details
(Keywords: regression)
Attachments
(2 files)
|
888.73 KB,
image/png
|
Details | |
|
1.05 KB,
patch
|
bjacob
:
review+
lsblakk
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
Build Identifier:
http://hg.mozilla.org/mozilla-central/rev/9366ee039645
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0 ID:20130915030208
This is similar Bug 915301 but, Bug 915301 did not fix the problem.
The glitch is still existing.
| Reporter | ||
Updated•12 years ago
|
Keywords: regression
Comment 1•12 years ago
|
||
Can't reproduce locally on Linux x64.
Which platform are you running? Windows x64? There might issues on ARM, but the patches for bug 915301 and bug 915495 should have solved major glitches on x64 and x86. I will try a debug build to run the checks on Google Maps.
| Reporter | ||
Comment 2•12 years ago
|
||
(In reply to Benjamin Bouvier [:bbouvier] from comment #1)
> Can't reproduce locally on Linux x64.
>
> Which platform are you running? Windows x64? There might issues on ARM, but
> the patches for bug 915301 and bug 915495 should have solved major glitches
> on x64 and x86. I will try a debug build to run the checks on Google Maps.
See Build Identifier in comment #0
Nightly26.0a1 win32 build running on Windows7 x64.
| Reporter | ||
Comment 3•12 years ago
|
||
WAIT,
It seems another regression.
| Reporter | ||
Comment 4•12 years ago
|
||
The regression range in comment #0 is wrong. (Sorry :bbouvier)
The correct regression rabge is as follows.
There are 2 regression
#1 Rendering glitch while zoom in/out
Most of the glitch disappear immediately.
#2 Rendering glitch while zoom in/out and the glitch remain.
#1 Regression window
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/2d06025ea63d
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0 ID:20130813150135
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/46f7b11d2594
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0 ID:20130813151137
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=2d06025ea63d&tochange=46f7b11d2594
Regressed by:
46f7b11d2594 Guillaume Abadie — bug 900767 - Implement the WebGL extension ANGLE_instanced_arrays - r=jgilbert
#2 Regression window
Good:
http://hg.mozilla.org/integration/mozilla-inbound/rev/2be3551a5d80
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0 ID:20130906171346
Bad:
http://hg.mozilla.org/integration/mozilla-inbound/rev/356866ae2f68
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:26.0) Gecko/20100101 Firefox/26.0 ID:20130906172546
Pushlog:
http://hg.mozilla.org/integration/mozilla-inbound/pushloghtml?fromchange=2be3551a5d80&tochange=356866ae2f68
Regressed by:
356866ae2f68 Jeff Gilbert — Bug 883478 - Update ANGLE to pull from 13-08-02. r=upstream,bjacob,bas
Comment 5•12 years ago
|
||
Chrome had this bug too, turns out it's a bug in ANGLE which has been recently fixed: https://code.google.com/p/angleproject/issues/detail?id=467
ANGLE_instanced_arrays support should be disabled until ANGLE can be updated with the fix. This is causing crashes for me, so it could be a security issue (https://crash-stats.mozilla.com/report/index/8c066237-e2ac-426b-8356-841ef2130916)
| Assignee | ||
Comment 6•12 years ago
|
||
Assignee: nobody → jgilbert
Attachment #805777 -
Flags: review?(bjacob)
Updated•12 years ago
|
Attachment #805777 -
Flags: review?(bjacob) → review+
Updated•12 years ago
|
status-firefox25:
--- → unaffected
status-firefox26:
--- → affected
status-firefox27:
--- → affected
tracking-firefox27:
--- → +
| Assignee | ||
Comment 7•12 years ago
|
||
| Assignee | ||
Comment 8•12 years ago
|
||
Comment on attachment 805777 [details] [diff] [review]
patch: Disable divisor support on ANGLE
[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 883478
User impact if declined: Broken rendering on Google Maps, etc.
Testing completed (on m-c, etc.): on m-i
Risk to taking this patch (and alternatives if risky): very low
String or IDL/UUID changes made by this patch: none
Attachment #805777 -
Flags: approval-mozilla-aurora?
Comment 9•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla27
Comment 10•12 years ago
|
||
This is said to fix the highly visible crash in bug 921196, I hope this gets uplifted to Aurora soon.
Updated•12 years ago
|
Attachment #805777 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Comment 11•12 years ago
|
||
I am not able to reproduce the bug on the build from comment 0. Alice can you verify this is fixed on latest Aurora?
Flags: needinfo?(alice0775)
| Reporter | ||
Comment 13•12 years ago
|
||
I cannot also reproduce the problem on the bad build.
Probably the site modified something on their side.
Anyway, I can verify the problem is not happen on the latest Aurora26.0a2 anymore.
Flags: needinfo?(alice0775)
Thanks Alice.
Comment 15•12 years ago
|
||
verified with Nightly build 20131024030204 on win 7
You need to log in
before you can comment on or make changes to this bug.
Description
•