Bug 916816 - Disable broken ANGLE divisor support. r=bjacob, a=lsblakk